@@ -2,6 +2,8 @@
 
 === Release 0.8.0 (TODO, 2009)
 - Added :code_tests to the rakefile
+- Report definitions don't need a full path to the :dbfile, the parameter here can now be relative to the yaml file itself
+- Added a Listings::next_page
 
 === Release 0.7.0 (Jul 5, 2009)
 - A good bit of refactoring
